# ppx_deriving_brr

./: .gitignore  .ocamlformat  README.md  dune-project  ppx_deriving_brr.opam
src/: accessor.ml  common.ml  conv.ml  dune  index.mld  opt.ml  ppx_deriving_brr.ml  utils.ml  utils.mli
test/: dune  gen_dune_rules.ml
test/passing/: conv.expected  conv.ml  dune  dune.inc  opt.expected  opt.ml  simple.expected  simple.ml
